--- a/css/article.scss
+++ b/css/article.scss
@@ -76,7 +76,7 @@ nav {
 
 .sidebar {
   width: 30%;
-  background-color: rgba(143, 213, 195, 0.25);
+  background-color: #E3F4F0;
   padding: 30px;
   position: relative;
   h3 {
