--- a/css/launch.css
+++ b/css/launch.css
@@ -1,38 +1,2 @@
-nav {
-  color: white;
-  background-color: #313131;
-  padding: 17px 50px; }
-
-.menu {
-  background-color: #97c3be;
-  width: 355px;
-  height: 100%;
-  font-size: 1.17em;
-  line-height: 3em;
-  position: fixed;
-  top: 0;
-  left: -355px;
-  z-index: 99; }
-  .menu .close {
-    height: 65px;
-    text-align: right;
-    margin-bottom: 30px;
-    margin-right: 30px; }
-    .menu .close i {
-      font-size: 2em;
-      line-height: 65px;
-      cursor: pointer; }
-  .menu li {
-    width: 100%;
-    padding-left: 28%; }
-    .menu li.current {
-      background-color: #7db7b1; }
-    .menu li:hover {
-      background-color: #7db7b1; }
-    .menu li a {
-      -webkit-transition: color .5s;
-      transition: color .5s; }
-      .menu li a:hover {
-        color: #33717c; }
-
+nav{color:white;background-color:#313131;padding:17px 50px}.menu{background-color:#97c3be;width:355px;height:100%;font-size:1.17em;line-height:3em;position:fixed;top:0;left:-355px;z-index:99}.menu .close-wrapper{margin-bottom:30px;margin-right:30px}.menu .close-wrapper .close{float:right}.menu .close-wrapper .close i{font-size:2em;line-height:65px;cursor:pointer}.menu li{width:100%;padding-left:28%}.menu li.current{background-color:#7db7b1}.menu li:hover{background-color:#7db7b1}.menu li a{-webkit-transition:color .5s;transition:color .5s}.menu li a:hover{color:#33717c}
 /*# sourceMappingURL=launch.css.map */
