--- a/css/activities.css
+++ b/css/activities.css
@@ -1,297 +1,2 @@
-nav {
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-  nav .nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-    nav .nav-container i {
-      cursor: pointer; }
-
-@media screen and (min-width: 1024px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 40px; } }
-@media screen and (max-width: 1024px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 20px; } }
-@media screen and (max-width: 480px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 10px; } }
-#nav-right {
-  width: 120px;
-  display: flex;
-  justify-content: space-between; }
-  #nav-right a {
-    font-size: 16px; }
-
-nav {
-  background-color: white; }
-
-.menu {
-  background-color: #97c3be;
-  width: 355px;
-  height: 100%;
-  font-size: 1.17em;
-  line-height: 3em;
-  position: fixed;
-  top: 0;
-  left: -355px;
-  z-index: 99; }
-  .menu .close {
-    height: 65px;
-    text-align: right;
-    margin-bottom: 30px;
-    margin-right: 30px; }
-    .menu .close i {
-      font-size: 2em;
-      line-height: 65px;
-      cursor: pointer; }
-  .menu li {
-    width: 100%;
-    padding-left: 28%; }
-    .menu li.current {
-      background-color: #7db7b1; }
-    .menu li:hover {
-      background-color: #7db7b1; }
-    .menu li a {
-      -webkit-transition: color .5s;
-      transition: color .5s; }
-      .menu li a:hover {
-        color: #33717c; }
-
-footer {
-  background-color: #e0caad;
-  background-image: url(../img/footer.jpg);
-  background-position: left center;
-  padding: 40px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-  footer ul {
-    margin: auto;
-    display: flex;
-    justify-content: center; }
-    footer ul li {
-      font-size: 87%;
-      padding: 0 20px;
-      border-left: 1px solid #313b4f; }
-      footer ul li:first-child {
-        border: 0; }
-  footer p {
-    font-size: 87%;
-    margin-top: 20px; }
-
-@media screen and (max-width: 768px) {
-  footer ul li {
-    padding: 0 10px; } }
-@media screen and (max-width: 480px) {
-  footer ul {
-    flex-direction: column;
-    align-items: center; }
-    footer ul li {
-      margin-bottom: 20px;
-      border: 0; } }
-body {
-  background-color: #333333;
-  background-repeat: repeat; }
-
-.jumbotron {
-  width: 100%;
-  height: 400px;
-  background-image: url(../img/Beach_Cleanup.jpg);
-  background-size: cover;
-  background-position: 50% 50%; }
-  .jumbotron h1 {
-    color: white;
-    text-align: center;
-    line-height: 400px;
-    font-weight: 400;
-    font-size: 1.7em;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    letter-spacing: 4px; }
-
-main > h1 {
-  color: white;
-  font-size: 2.6em;
-  text-align: center;
-  margin: 50px auto; }
-
-section {
-  height: 590px;
-  /* increasing 200px while loading each row */ }
-  section .timeline {
-    width: 1066px;
-    height: 100%;
-    margin: auto;
-    position: relative; }
-    section .timeline .line {
-      width: 5px;
-      height: 100%;
-      margin: auto;
-      background-color: white; }
-    section .timeline .middle {
-      width: 100%;
-      margin: auto;
-      position: absolute;
-      top: 0; }
-      section .timeline .middle .launch-btn-outer, section .timeline .middle .launch-btn-outer .launch-btn-inner {
-        width: 120px;
-        height: 120px;
-        border-radius: 50%;
-        background-color: #333333;
-        border: 10px dashed #75da7a;
-        margin: auto;
-        padding: 10px;
-        box-sizing: content-box;
-        -webkit-animation-name: spin;
-        -webkit-animation-duration: 4000ms;
-        -webkit-animation-iteration-count: infinite;
-        -webkit-animation-timing-function: linear;
-        -moz-animation-name: spin;
-        -moz-animation-duration: 4000ms;
-        -moz-animation-iteration-count: infinite;
-        -moz-animation-timing-function: linear;
-        -ms-animation-name: spin;
-        -ms-animation-duration: 4000ms;
-        -ms-animation-iteration-count: infinite;
-        -ms-animation-timing-function: linear;
-        animation-name: spin;
-        animation-duration: 4000ms;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear; }
-        section .timeline .middle .launch-btn-outer .launch-btn-inner {
-          background-color: white;
-          border: 0;
-          box-sizing: border-box;
-          -webkit-animation-name: reverseSpin;
-          -webkit-animation-duration: 4000ms;
-          -webkit-animation-iteration-count: infinite;
-          -webkit-animation-timing-function: linear;
-          -moz-animation-name: reverseSpin;
-          -moz-animation-duration: 4000ms;
-          -moz-animation-iteration-count: infinite;
-          -moz-animation-timing-function: linear;
-          -ms-animation-name: reverseSpin;
-          -ms-animation-duration: 4000ms;
-          -ms-animation-iteration-count: infinite;
-          -ms-animation-timing-function: linear;
-          animation-name: reverseSpin;
-          animation-duration: 4000ms;
-          animation-iteration-count: infinite;
-          animation-timing-function: linear; }
-          section .timeline .middle .launch-btn-outer .launch-btn-inner i {
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            font-size: 5em;
-            line-height: 100px; }
-      section .timeline .middle .node {
-        width: 441px;
-        height: 250px;
-        display: inline-block; }
-        section .timeline .middle .node.right {
-          position: absolute;
-          left: 50%; }
-          section .timeline .middle .node.right .content {
-            padding-top: 45px;
-            padding-left: 170px; }
-        section .timeline .middle .node.left {
-          position: absolute;
-          right: 50%;
-          -moz-transform: scale(-1, -1);
-          -o-transform: scale(-1, -1);
-          -webkit-transform: scale(-1, -1);
-          transform: scale(-1, -1); }
-          section .timeline .middle .node.left .content {
-            -moz-transform: scale(-1, -1);
-            -o-transform: scale(-1, -1);
-            -webkit-transform: scale(-1, -1);
-            transform: scale(-1, -1);
-            padding-bottom: 55px;
-            padding-left: 100px; }
-        section .timeline .middle .node .dot-wrapper {
-          width: 26px;
-          height: 100%; }
-          section .timeline .middle .node .dot-wrapper .dot {
-            width: 100%;
-            height: 26px;
-            background-color: white;
-            border-radius: 50% 50%;
-            margin-top: 112px;
-            margin-left: -13px; }
-        section .timeline .middle .node .dialog-box {
-          background-size: contain;
-          background-repeat: no-repeat;
-          width: 415px;
-          height: 100%; }
-          section .timeline .middle .node .dialog-box .content h3 {
-            line-height: 2.5em; }
-          section .timeline .middle .node .dialog-box .content p {
-            line-height: 2em; }
-          section .timeline .middle .node .dialog-box .content button {
-            height: 35px;
-            border: 1px solid #606f89;
-            color: #3a465c;
-            border-radius: 2px;
-            background-color: transparent;
-            margin-top: 20px;
-            margin-right: 10px;
-            padding: 0 20px;
-            vertical-align: middle;
-            line-height: 35px;
-            font-size: 0.88em;
-            cursor: pointer; }
-          section .timeline .middle .node .dialog-box .content span {
-            font-size: 0.85em;
-            vertical-align: bottom; }
-            section .timeline .middle .node .dialog-box .content span > span {
-              font-size: 1em;
-              color: #fa9632; }
-
-@-ms-keyframes spin {
-  from {
-    -ms-transform: rotate(0deg); }
-  to {
-    -ms-transform: rotate(360deg); } }
-@-moz-keyframes spin {
-  from {
-    -moz-transform: rotate(0deg); }
-  to {
-    -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin {
-  from {
-    -webkit-transform: rotate(0deg); }
-  to {
-    -webkit-transform: rotate(360deg); } }
-@keyframes spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
-@-ms-keyframes reverseSpin {
-  from {
-    -ms-transform: rotate(0deg); }
-  to {
-    -ms-transform: rotate(-360deg); } }
-@-moz-keyframes reverseSpin {
-  from {
-    -moz-transform: rotate(0deg); }
-  to {
-    -moz-transform: rotate(-360deg); } }
-@-webkit-keyframes reverseSpin {
-  from {
-    -webkit-transform: rotate(0deg); }
-  to {
-    -webkit-transform: rotate(-360deg); } }
-@keyframes reverseSpin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(-360deg); } }
-
+nav{background-color:white}body{background-color:#333333;background-repeat:repeat}.jumbotron{width:100%;height:400px;background-image:url(../img/Beach_Cleanup.jpg);background-size:cover;background-position:50% 50%}.jumbotron h1{color:white;text-align:center;line-height:400px;font-weight:400;font-size:1.7em;text-shadow:2px 2px 5px rgba(0,0,0,0.5);letter-spacing:4px}main>h1{color:white;font-size:2.6em;text-align:center;margin:50px auto}section{height:590px}section .timeline{width:1066px;height:100%;margin:auto;position:relative}section .timeline .line{width:5px;height:100%;margin:auto;background-color:white}section .timeline .middle{width:100%;margin:auto;position:absolute;top:0}section .timeline .middle .launch-btn-outer,section .timeline .middle .launch-btn-outer .launch-btn-inner{width:120px;height:120px;border-radius:50%;background-color:#333333;border:10px dashed #75da7a;margin:auto;padding:10px;box-sizing:content-box;-webkit-animation-name:spin;-webkit-animation-duration:4000ms;-webkit-animation-iteration-count:infinite;-webkit-animation-timing-function:linear;-moz-animation-name:spin;-moz-animation-duration:4000ms;-moz-animation-iteration-count:infinite;-moz-animation-timing-function:linear;-ms-animation-name:spin;-ms-animation-duration:4000ms;-ms-animation-iteration-count:infinite;-ms-animation-timing-function:linear;animation-name:spin;animation-duration:4000ms;animation-iteration-count:infinite;animation-timing-function:linear}section .timeline .middle .launch-btn-outer .launch-btn-inner{background-color:white;border:0;box-sizing:border-box;-webkit-animation-name:reverseSpin;-webkit-animation-duration:4000ms;-webkit-animation-iteration-count:infinite;-webkit-animation-timing-function:linear;-moz-animation-name:reverseSpin;-moz-animation-duration:4000ms;-moz-animation-iteration-count:infinite;-moz-animation-timing-function:linear;-ms-animation-name:reverseSpin;-ms-animation-duration:4000ms;-ms-animation-iteration-count:infinite;-ms-animation-timing-function:linear;animation-name:reverseSpin;animation-duration:4000ms;animation-iteration-count:infinite;animation-timing-function:linear}section .timeline .middle .launch-btn-outer .launch-btn-inner i{width:100%;height:100%;text-align:center;font-size:5em;line-height:100px}section .timeline .middle .node{width:441px;height:250px;display:inline-block}section .timeline .middle .node.right{position:absolute;left:50%}section .timeline .middle .node.right .content{padding-top:45px;padding-left:170px}section .timeline .middle .node.left{position:absolute;right:50%;-moz-transform:scale(-1, -1);-o-transform:scale(-1, -1);-webkit-transform:scale(-1, -1);transform:scale(-1, -1)}section .timeline .middle .node.left .content{-moz-transform:scale(-1, -1);-o-transform:scale(-1, -1);-webkit-transform:scale(-1, -1);transform:scale(-1, -1);padding-bottom:55px;padding-left:100px}section .timeline .middle .node .dot-wrapper{width:26px;height:100%}section .timeline .middle .node .dot-wrapper .dot{width:100%;height:26px;background-color:white;border-radius:50% 50%;margin-top:112px;margin-left:-13px}section .timeline .middle .node .dialog-box{background-size:contain;background-repeat:no-repeat;width:415px;height:100%}section .timeline .middle .node .dialog-box .content h3{line-height:2.5em}section .timeline .middle .node .dialog-box .content p{line-height:2em}section .timeline .middle .node .dialog-box .content button{height:35px;border:1px solid #606f89;color:#3a465c;border-radius:2px;background-color:transparent;margin-top:20px;margin-right:10px;padding:0 20px;vertical-align:middle;line-height:35px;font-size:0.88em;cursor:pointer}section .timeline .middle .node .dialog-box .content span{font-size:0.85em;vertical-align:bottom}section .timeline .middle .node .dialog-box .content span>span{font-size:1em;color:#fa9632}@-ms-keyframes spin{from{-ms-transform:rotate(0deg)}to{-ms-transform:rotate(360deg)}}@-moz-keyframes spin{from{-moz-transform:rotate(0deg)}to{-moz-transform:rotate(360deg)}}@-webkit-keyframes spin{from{-webkit-transform:rotate(0deg)}to{-webkit-transform:rotate(360deg)}}@keyframes spin{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}@-ms-keyframes reverseSpin{from{-ms-transform:rotate(0deg)}to{-ms-transform:rotate(-360deg)}}@-moz-keyframes reverseSpin{from{-moz-transform:rotate(0deg)}to{-moz-transform:rotate(-360deg)}}@-webkit-keyframes reverseSpin{from{-webkit-transform:rotate(0deg)}to{-webkit-transform:rotate(-360deg)}}@keyframes reverseSpin{from{transform:rotate(0deg)}to{transform:rotate(-360deg)}}
 /*# sourceMappingURL=activities.css.map */
