--- a/css/formPage.css
+++ b/css/formPage.css
@@ -1,154 +1,2 @@
-.menu {
-  background-color: #97c3be;
-  width: 355px;
-  height: 100%;
-  font-size: 1.17em;
-  line-height: 3em;
-  position: fixed;
-  top: 0;
-  left: -355px;
-  z-index: 99; }
-  .menu .close {
-    height: 65px;
-    text-align: right;
-    margin-bottom: 30px;
-    margin-right: 30px; }
-    .menu .close i {
-      font-size: 2em;
-      line-height: 65px;
-      cursor: pointer; }
-  .menu li {
-    width: 100%;
-    padding-left: 28%; }
-    .menu li.current {
-      background-color: #7db7b1; }
-    .menu li:hover {
-      background-color: #7db7b1; }
-    .menu li a {
-      -webkit-transition: color .5s;
-      transition: color .5s; }
-      .menu li a:hover {
-        color: #33717c; }
-
-body {
-  position: relative; }
-
-nav {
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-  nav .nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-    nav .nav-container i {
-      cursor: pointer; }
-
-@media screen and (min-width: 1024px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 40px; } }
-@media screen and (max-width: 1024px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 20px; } }
-@media screen and (max-width: 480px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 10px; } }
-#nav-right {
-  width: 120px;
-  display: flex;
-  justify-content: space-between; }
-  #nav-right a {
-    font-size: 16px; }
-
-nav {
-  color: white;
-  background-color: #313131;
-  position: fixed;
-  z-index: 99;
-  width: 100%; }
-  @media (max-width: 768px) {
-    nav {
-      position: static; } }
-  nav i {
-    cursor: pointer; }
-
-main {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0; }
-  @media (max-width: 768px) {
-    main {
-      position: static; } }
-  main .main-image {
-    width: 30%;
-    height: 100%;
-    background-position: 43% 50%;
-    background-size: cover;
-    position: fixed; }
-    @media (max-width: 768px) {
-      main .main-image {
-        width: 100%;
-        height: 170px;
-        position: static;
-        background-position: 43% 40%; } }
-    @media (max-width: 480px) {
-      main .main-image {
-        height: 120px; } }
-  main .form {
-    width: 70%;
-    padding: 150px 0px 60px 0px; }
-    @media (max-width: 768px) {
-      main .form {
-        width: 100%;
-        padding-top: 100px; } }
-    @media (max-width: 480px) {
-      main .form {
-        padding-top: 60px; } }
-    main .form form {
-      max-width: 500px;
-      margin: auto; }
-      @media (max-width: 768px) {
-        main .form form {
-          max-width: 100%; } }
-      main .form form li {
-        margin-bottom: 30px; }
-        @media (max-width: 768px) {
-          main .form form li {
-            padding: 0 50px; }
-            main .form form li.editor {
-              padding: 0; } }
-        @media (max-width: 480px) {
-          main .form form li {
-            padding: 0 25px; }
-            main .form form li.editor {
-              padding: 0; } }
-        main .form form li input {
-          width: 100%;
-          padding: 10px 0;
-          border: 0;
-          border-bottom: 1px solid #313b4f;
-          outline: none;
-          background-color: transparent; }
-          main .form form li input:focus {
-            border-bottom: 2px solid #55bbb5; }
-        main .form form li textarea {
-          width: 100%;
-          margin-top: 10px; }
-        main .form form li button.cancel, main .form form li button.submit {
-          float: right;
-          padding: 6px 25px;
-          font-size: 1em;
-          margin-left: 6px;
-          border: 0;
-          background-color: #d5d5d5;
-          cursor: pointer; }
-        main .form form li button.submit {
-          background-color: #75da7a;
-          color: white; }
-
+.menu{background-color:#97c3be;width:355px;height:100%;font-size:1.17em;line-height:3em;position:fixed;top:0;left:-355px;z-index:99}.menu .close-wrapper{margin-bottom:30px;margin-right:30px}.menu .close-wrapper .close{float:right}.menu .close-wrapper .close i{font-size:2em;line-height:65px;cursor:pointer}.menu li{width:100%;padding-left:28%}.menu li.current{background-color:#7db7b1}.menu li:hover{background-color:#7db7b1}.menu li a{-webkit-transition:color .5s;transition:color .5s}.menu li a:hover{color:#33717c}body{position:relative}nav{height:65px;display:flex;align-items:center;justify-content:center;background-color:white}nav.dark{color:white;background-color:#313131;padding:17px 50px}nav .nav-container{display:flex;justify-content:space-between;align-items:center}nav .nav-container i{cursor:pointer}nav .nav-container .nav-left .menu-icon,nav .nav-container .nav-left .logo{display:inline-block}nav .nav-container .nav-left .menu-icon{margin-right:60px}nav .nav-container .nav-left .logo img{height:25px}nav .nav-container .nav-right{width:120px;display:flex;justify-content:space-between}nav .nav-container .nav-right a{font-size:16px}@media screen and (min-width: 1024px){.nav-container{width:100%;padding:0 40px}}@media screen and (max-width: 1024px){.nav-container{width:100%;padding:0 20px}}@media screen and (max-width: 480px){.nav-container{width:100%;padding:0 10px}}nav{color:white;background-color:#313131;position:fixed;z-index:99;width:100%}@media (max-width: 768px){nav{position:static}}nav i{cursor:pointer}main{width:100%;height:100%;position:absolute;top:0}@media (max-width: 768px){main{position:static}}main .main-image{width:30%;height:100%;background-position:43% 50%;background-size:cover;position:fixed}@media (max-width: 768px){main .main-image{width:100%;height:170px;position:static;background-position:43% 40%}}@media (max-width: 480px){main .main-image{height:120px}}main .form{width:70%;padding:150px 0px 60px 0px}@media (max-width: 768px){main .form{width:100%;padding-top:100px}}@media (max-width: 480px){main .form{padding-top:60px}}main .form form{max-width:500px;margin:auto}@media (max-width: 768px){main .form form{max-width:100%}}main .form form li{margin-bottom:30px}@media (max-width: 768px){main .form form li{padding:0 50px}main .form form li.editor{padding:0}}@media (max-width: 480px){main .form form li{padding:0 25px}main .form form li.editor{padding:0}}main .form form li input{width:100%;padding:10px 0;border:0;border-bottom:1px solid #313b4f;outline:none;background-color:transparent}main .form form li input:focus{border-bottom:2px solid #55bbb5}main .form form li textarea{width:100%;margin-top:10px}main .form form li button.cancel,main .form form li button.submit{float:right;padding:6px 25px;font-size:1em;margin-left:6px;border:0;background-color:#d5d5d5;cursor:pointer}main .form form li button.submit{background-color:#75da7a;color:white}
 /*# sourceMappingURL=formPage.css.map */
