--- a/css/home.scss
+++ b/css/home.scss
@@ -40,19 +40,19 @@ nav {
 }
 
 .story-1 {
-  display: flex;
-  width: 100%;
-  height: 0px;
-  padding-top: 20%;
-  padding-bottom: 35%;
-  background-image: url(../img/home_image01.jpg);
-  background-size: cover;
-  background-position: center;
-  div {
-    margin: auto;
-    padding: 0px 10px;
-    background-color: black;
-    opacity: 0.6;
+  position: relative;
+  height: 100vh;
+  
+  .bg-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .copy {
+    position: absolute;
+    right: 40px;
+    bottom: 70px;
   }
 }
 
