--- a/css/myAccount.css
+++ b/css/myAccount.css
@@ -1,175 +1,2 @@
-body {
-  background-color: #313131; }
-
-/*Nav Settings*/
-nav {
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-  nav .nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-    nav .nav-container i {
-      cursor: pointer; }
-
-@media screen and (min-width: 1024px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 40px; } }
-@media screen and (max-width: 1024px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 20px; } }
-@media screen and (max-width: 480px) {
-  .nav-container {
-    width: 100%;
-    padding: 0 10px; } }
-#nav-right {
-  width: 120px;
-  display: flex;
-  justify-content: space-between; }
-  #nav-right a {
-    font-size: 16px; }
-
-nav {
-  background-color: white; }
-
-.menu {
-  background-color: #97c3be;
-  width: 355px;
-  height: 100%;
-  font-size: 1.17em;
-  line-height: 3em;
-  position: fixed;
-  top: 0;
-  left: -355px;
-  z-index: 99; }
-  .menu .close {
-    height: 65px;
-    text-align: right;
-    margin-bottom: 30px;
-    margin-right: 30px; }
-    .menu .close i {
-      font-size: 2em;
-      line-height: 65px;
-      cursor: pointer; }
-  .menu li {
-    width: 100%;
-    padding-left: 28%; }
-    .menu li.current {
-      background-color: #7db7b1; }
-    .menu li:hover {
-      background-color: #7db7b1; }
-    .menu li a {
-      -webkit-transition: color .5s;
-      transition: color .5s; }
-      .menu li a:hover {
-        color: #33717c; }
-
-.big-pic {
-  background-size: cover;
-  background-position: 50% 30%;
-  background-image: url("../img/account_bg.jpg");
-  width: 100%;
-  height: 200px; }
-
-/* Container Settings */
-.container {
-  margin-top: 50px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  justify-content: center; }
-
-.block-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
-  .block-container li {
-    width: 200px;
-    height: 250px;
-    margin-bottom: 50px;
-    background-color: white; }
-    .block-container li:hover {
-      cursor: pointer; }
-
-.block-data {
-  display: none;
-  padding: 10px;
-  flex-direction: column; }
-  .block-data label {
-    padding: 5px; }
-    .block-data label input {
-      margin-top: 5px; }
-
-.send-data {
-  display: none;
-  color: #313131;
-  background-color: #80cf73;
-  font-size: 20px;
-  padding: 0px 30px; }
-
-.block-icon {
-  height: 70%;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .block-icon .material-icons {
-    font-size: 40px; }
-
-.block-title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 30%;
-  background-color: #cfcfcf; }
-
-@media screen and (min-width: 1024px) {
-  .block-container {
-    width: 650px; } }
-@media screen and (max-width: 1024px) {
-  .block-container {
-    width: 650px; } }
-@media screen and (max-width: 480px) {
-  .block-container {
-    width: 100%;
-    padding: 0 20px; }
-    .block-container li {
-      width: 100%; } }
-footer {
-  background-color: #e0caad;
-  background-image: url(../img/footer.jpg);
-  background-position: left center;
-  padding: 40px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-  footer ul {
-    margin: auto;
-    display: flex;
-    justify-content: center; }
-    footer ul li {
-      font-size: 87%;
-      padding: 0 20px;
-      border-left: 1px solid #313b4f; }
-      footer ul li:first-child {
-        border: 0; }
-  footer p {
-    font-size: 87%;
-    margin-top: 20px; }
-
-@media screen and (max-width: 768px) {
-  footer ul li {
-    padding: 0 10px; } }
-@media screen and (max-width: 480px) {
-  footer ul {
-    flex-direction: column;
-    align-items: center; }
-    footer ul li {
-      margin-bottom: 20px;
-      border: 0; } }
-
+body{background-color:#313131}nav{height:65px;display:flex;align-items:center;justify-content:center;background-color:white}nav.dark{color:white;background-color:#313131;padding:17px 50px}nav .nav-container{display:flex;justify-content:space-between;align-items:center}nav .nav-container i{cursor:pointer}nav .nav-container .nav-left .menu-icon,nav .nav-container .nav-left .logo{display:inline-block}nav .nav-container .nav-left .menu-icon{margin-right:60px}nav .nav-container .nav-left .logo img{height:25px}nav .nav-container .nav-right{width:120px;display:flex;justify-content:space-between}nav .nav-container .nav-right a{font-size:16px}@media screen and (min-width: 1024px){.nav-container{width:100%;padding:0 40px}}@media screen and (max-width: 1024px){.nav-container{width:100%;padding:0 20px}}@media screen and (max-width: 480px){.nav-container{width:100%;padding:0 10px}}nav{background-color:white}.menu{background-color:#97c3be;width:355px;height:100%;font-size:1.17em;line-height:3em;position:fixed;top:0;left:-355px;z-index:99}.menu .close-wrapper{margin-bottom:30px;margin-right:30px}.menu .close-wrapper .close{float:right}.menu .close-wrapper .close i{font-size:2em;line-height:65px;cursor:pointer}.menu li{width:100%;padding-left:28%}.menu li.current{background-color:#7db7b1}.menu li:hover{background-color:#7db7b1}.menu li a{-webkit-transition:color .5s;transition:color .5s}.menu li a:hover{color:#33717c}.big-pic{background-size:cover;background-position:50% 30%;background-image:url("../img/account_bg.jpg");width:100%;height:200px}.container{margin-top:50px;width:100%;margin-left:auto;margin-right:auto;display:flex;justify-content:center}.block-container{display:flex;flex-wrap:wrap;justify-content:space-between}.block-container li{width:200px;height:250px;margin-bottom:50px;background-color:white}.block-container li:hover{cursor:pointer}.block-data{display:none;padding:10px;flex-direction:column}.block-data label{padding:5px}.block-data label input{margin-top:5px}.send-data{display:none;color:#313131;background-color:#80cf73;font-size:20px;padding:0px 30px}.block-icon{height:70%;display:flex;justify-content:center;align-items:center}.block-icon .material-icons{font-size:40px}.block-title{display:flex;justify-content:center;align-items:center;height:30%;background-color:#cfcfcf}@media screen and (min-width: 1024px){.block-container{width:650px}}@media screen and (max-width: 1024px){.block-container{width:650px}}@media screen and (max-width: 480px){.block-container{width:100%;padding:0 20px}.block-container li{width:100%}}footer{background-color:#e0caad;background-image:url(../img/footer.jpg);background-position:left center;padding:40px 0;display:flex;flex-direction:column;align-items:center}footer ul{margin:auto;display:flex;justify-content:center}footer ul li{font-size:87%;padding:0 20px;border-left:1px solid #313b4f}footer ul li:first-child{border:0}footer p{font-size:87%;margin-top:20px}@media screen and (max-width: 768px){footer ul li{padding:0 10px}}@media screen and (max-width: 480px){footer ul{flex-direction:column;align-items:center}footer ul li{margin-bottom:20px;border:0}}
 /*# sourceMappingURL=myAccount.css.map */
