--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,2 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html, body {
-  width: 100%;
-  height: 100%;
-  font-size: 16px;
-  font-family: "Noto Sans TC", sans-serif;
-  font-weight: 400;
-  color: #313b4f;
-  text-decoration: none;
-}
-
-.clear:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.clear > * {
-  float: left;
-}
-
-.pull-right {
-  float: right;
-}
-
-.hide {
-  display: none;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
+@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);nav{height:65px;display:flex;align-items:center;justify-content:center;background-color:white}nav.dark{color:white;background-color:#313131;padding:17px 50px}nav .nav-container{display:flex;justify-content:space-between;align-items:center}nav .nav-container i{cursor:pointer}nav .nav-container .nav-left .menu-icon,nav .nav-container .nav-left .logo{display:inline-block}nav .nav-container .nav-left .menu-icon{margin-right:60px}nav .nav-container .nav-left .logo img{height:25px}nav .nav-container .nav-right{width:120px;display:flex;justify-content:space-between}nav .nav-container .nav-right a{font-size:16px}@media screen and (min-width: 1024px){.nav-container{width:100%;padding:0 40px}}@media screen and (max-width: 1024px){.nav-container{width:100%;padding:0 20px}}@media screen and (max-width: 480px){.nav-container{width:100%;padding:0 10px}}.menu{background-color:#97c3be;width:355px;height:100%;font-size:1.17em;line-height:3em;position:fixed;top:0;left:-355px;z-index:99}.menu .close-wrapper{margin-bottom:30px;margin-right:30px}.menu .close-wrapper .close{float:right}.menu .close-wrapper .close i{font-size:2em;line-height:65px;cursor:pointer}.menu li{width:100%;padding-left:28%}.menu li.current{background-color:#7db7b1}.menu li:hover{background-color:#7db7b1}.menu li a{-webkit-transition:color .5s;transition:color .5s}.menu li a:hover{color:#33717c}footer{background-color:#e0caad;background-image:url(../img/footer.jpg);background-position:left center;padding:40px 0;display:flex;flex-direction:column;align-items:center}footer ul{margin:auto;display:flex;justify-content:center}footer ul li{font-size:87%;padding:0 20px;border-left:1px solid #313b4f}footer ul li:first-child{border:0}footer p{font-size:87%;margin-top:20px}@media screen and (max-width: 768px){footer ul li{padding:0 10px}}@media screen and (max-width: 480px){footer ul{flex-direction:column;align-items:center}footer ul li{margin-bottom:20px;border:0}}*{margin:0;padding:0;box-sizing:border-box}html,body{width:100%;height:100%;font-size:16px;font-family:"Noto Sans TC", sans-serif;font-weight:400;color:#313b4f;text-decoration:none}.clear:after{content:"";display:block;clear:both}.clear>*{float:left}.pull-right{float:right}.hide{display:none}li{list-style:none}a{text-decoration:none;color:inherit}
+/*# sourceMappingURL=style.css.map */
