--- a/css/scss/myAccount.scss
+++ b/css/scss/myAccount.scss
@@ -3,12 +3,43 @@
 @import "footer";
 @import 'form';
 
+@mixin pop-up-form($width) {
+  opacity: 0;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  border-radius: 7px;
+  padding: 60px 130px;
+  width: $width;
+  -webkit-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.2);
+     -moz-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.2);
+          box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.2);
+}
+
+@mixin close-btn() {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+
+  .material-icons {
+    color: #a1a1a1;
+    font-size: 42px;
+  }
+}
+
 body{
   background-color: #313131;
 }
 
 nav{
   background-color: white;
+}
+
+form {
+  max-width: none;
 }
 
 .profile-banner{
@@ -26,12 +57,16 @@ nav{
     
     .profile-photo {
       display: table-cell;
-      background-color: #dadada;
-      background-image: url('../../img/profile-photo.png');
-      background-size: contain;
-      border-radius: 50%;
       width: 100px;
       height: 100px;
+      cursor: pointer;
+      
+      img {
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
     
     .profile-welcome {
@@ -47,10 +82,48 @@ nav{
 
 /* Container Settings */
 .container{
+  position: relative;
   margin-top: 50px;
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  
+  .upload-photo-form {
+    @include pop-up-form(auto);
+    
+    .close-btn {
+      @include close-btn();
+    }
+    
+    .form-item {
+      margin-top: 30px;
+      
+      button.cancel, button.submit {
+        float: none;
+        margin-left: 0;
+        margin-right: 6px;
+      }
+    }
+    
+    #file {
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      overflow: hidden;
+      position: absolute;
+      z-index: -1;
+    }
+    
+    label {
+      cursor: pointer;
+      display: table;
+      
+      .material-icons {
+        display: table-cell;
+        vertical-align: middle;
+      }
+    }
+  }
 }
 
 /* Grid */
@@ -84,17 +157,8 @@ nav{
     }
   }
   
-  .update-account-form {
-    opacity: 0;
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    border-radius: 7px;
-    padding: 60px 90px;
-    width: 760px;
-    -webkit-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.2);
-       -moz-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.2);
-            box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.2);
+  .pop-up-form {
+    @include pop-up-form(760px);
     
     &.close {
       width: 0;
@@ -103,15 +167,7 @@ nav{
     }
     
     .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      cursor: pointer;
-      
-      .material-icons {
-        color: #a1a1a1;
-        font-size: 42px;
-      }
+      @include close-btn();
     }
   }
   
